@@ -1,3 +1,5 @@
+* Add test creation of minimal chart of accounts
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 
